--- a/src/add.html
+++ b/src/add.html
@@ -16,11 +16,21 @@
 	<a href="index.php" class="btn btn-primary">Home</a>
 	<br/><br/>
 
-	<form action="add.php" method="post" name="form1">
+	<form action="add.php" method="post">
 
 		<div class="form-group">
 			<label for="name">Name</label>
 			<input type="text" class="form-control" name="name">
+		</div>
+
+		<div class="form-group">
+			<label for="name">Surname1</label>
+			<input type="text" class="form-control" name="surname1">
+		</div>
+
+		<div class="form-group">
+			<label for="name">Surname2</label>
+			<input type="text" class="form-control" name="surname2">
 		</div>
 
 		<div class="form-group">
